# CompilerGYMAgent

./: .gitignore  README.md  pyproject.toml
dev_memory/: BLOCKERS.md  CURRENT_PHASE.yaml  DECISIONS.md  HANDOFF_2026-06-13_08a5.md  HANDOFF_PROMPT.md  PROGRESS.md  ROADMAP.md  ROADMAP.yaml
dev_memory/phases/phase_01_config_init/: CHECKLIST.yaml  REVIEW_NOTES.md  SUMMARY.md  UT_RESULTS.md
dev_memory/phases/phase_02_fs_memory/: CHECKLIST.yaml  REVIEW_NOTES.md  SUMMARY.md  UT_RESULTS.md
dev_memory/phases/phase_03_trace_lifecycle/: CHECKLIST.yaml  REVIEW_NOTES.md  SUMMARY.md  (+1 more)
dev_memory/spikes/: 05.5_integration_feasibility_findings.md
doc/: ARCHITECTURE_HLD.md  CODEX_KICKOFF_PROMPT.md  PHASE_7.0_CONTRACTS_DRAFT.md  REQUIREMENTS.md  USER_REQUIREMENTS.md
spikes/05.5_integration_feasibility/: README.md  full_agent.py  mock_llm.py  objective.py  option_ir.py  runner.py  strategies.py
src/agent/: __init__.py  candidate_identity.py  config.py  errors.py  filesystem.py  fs_memory.py  identifiers.py  init.py  process_cleaner.py  process_identity.py  process_registry.py  process_runner.py  registry.py  stats_core.py  trace.py  trace_cleanup.py  types.py  workspace_lock.py
tests/: __init__.py  test_benchmark_skill.py  test_cli_clean_trace.py  test_compile_skill.py  test_config.py  test_error_analyzer.py  test_errors.py  test_fake_gbs.py  test_filesystem.py  test_fs_memory.py  test_identifiers.py  test_init.py  test_process_cleaner.py  test_process_identity.py  test_process_lab.py  test_process_registry.py  test_process_runner.py  test_registry.py  test_result_schema.py  test_spec_skills.py  test_state_consistency.py  test_stats_core.py  test_stats_core_coverage_regression.py  test_trace_cleanup.py  test_trace_cleanup_execute.py  test_trace_memory.py  test_trace_session.py  test_workspace_lock.py  test_workspace_skills.py
tests/fixtures/: __init__.py  fake_workspace.py  process_lab.py
(+243 files in other folders)
