[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compiler-gym-agent"
version = "0.1.0"
description = "Local-first compiler option tuning agent"
readme = "doc/REQUIREMENTS.md"
requires-python = ">=3.11"
dependencies = [
  "loguru>=0.7",
  "pydantic>=2.7,<3",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
