[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "compiler-gym-agent"
version = "0.1.0"
description = "Local-first compiler option tuning agent"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.7,<3",
  "psutil>=5.9,<8",
  "PyYAML>=6.0,<7",
]

[project.scripts]
agent = "agent.cli.__main__:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<10",
  "tomli>=2.0,<3; python_version < '3.11'",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-ra"
